# relay-clip

./: .gitignore  MOBILE_BUILD_STATUS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml
scripts/: android-build-utils.mjs  build-android-debug.mjs  configure-android-project.mjs  configure-apple-project.mjs  prepare-android-build.mjs  set-calver.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/mobile-bridge/: README.md
src-tauri/mobile-bridge/android/src/main/java/com/relayclip/mobilebridge/: MobileBridgePlugin.kt
src-tauri/mobile-bridge/ios/Sources/: MobileBridgePlugin.swift
src-tauri/src/: clipboard.rs  discovery.rs  i18n.rs  lib.rs  main.rs  mobile_bridge.rs  models.rs  runtime.rs  store.rs  transfers.rs  transport.rs  tray.rs
src/lib/: api.ts  i18n.ts  types.ts
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/progress/: index.ts  progress.svelte
src/lib/components/ui/scroll-area/: index.ts  scroll-area.svelte
src/lib/components/ui/separator/: index.ts  separator.svelte
src/lib/components/ui/switch/: index.ts  switch.svelte
