[package]
name = "relayclip"
version = "2026.3.13"
description = "RelayClip cross-platform clipboard relay"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "relayclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dirs = "6.0.0"
hex = "0.4.3"
hostname = "0.4.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
libc = "0.2"
prost = "0.13.5"
rcgen = "0.14.7"
rustls = { version = "0.23.34", default-features = false, features = ["ring", "std", "tls12"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
log = "0.4"
sys-locale = "0.3"
tauri = { version = "2.10.3", features = ["image-png", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.4"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
arboard = "3.6.1"
mdns-sd = "0.18.2"
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }
